tests/tests/snapshots/test__serde_validate_recursion__serde-validate-recursion-mutually-recursive-typescript.snap
---
source: tests/tests/serde_validate_recursion.rs
assertion_line: 125
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type RecA = RecB | { [key in string]: string };

export type RecB = RecA | { [key in string]: string };

export type TagMutual = {
	t: "Y",
} & RecA;
