tests/tests/snapshots/test__serde_validate_recursion__serde-validate-recursion-self-recursive-typescript.snap
---
source: tests/tests/serde_validate_recursion.rs
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
export type Rec = { [key in string]: string };

export type TagRec = {
	t: "X",
} & Rec;
