tests/tests/snapshots/test__serde_validate_recursion__serde-validate-recursion-wraps-tree-non-cyclic.snap
---
source: tests/tests/serde_validate_recursion.rs
expression: ts
---
// This file has been generated by Specta. Do not edit this file manually.
/**
 *  Legitimate recursion through object structure, which TypeScript has no
 *  trouble with (`type Tree = { children: Tree[] }`) because array/object
 *  types defer resolution instead of eagerly inlining. Exporting this must
 *  not change: it doesn't go through any alias-transparent hop at all.
 */
export type Tree = {
	children: Tree[],
};

/**
 *  An untagged enum whose newtype variant references a *different*
 *  recursive type (`Tree`) non-cyclically - `Tree` never refers back to
 *  `WrapsTree`, so no alias-transparent cycle exists and this must render
 *  exactly as before (a plain reference to `Tree` in the union).
 */
export type WrapsTree = Tree | number;
